# vibe-bgs

./: .gitignore  BackgroundSubtract.cpp  BackgroundSubtract.h  CMakeLists.txt  Detector.cpp  Detector.h  VIBE.cpp  VIBE.h  doit.sh  main  main.cpp
cmake-modules/: FindOpenCV.cmake
